{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 1471,
  "lineage": "ac812d2e-e9d5-5a32-c8f4-6afbc0110fcc",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988182270763:security-group/sg-091dc5cbd055acec4",
            "description": "Default SG for internal access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091dc5cbd055acec4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "mlops-demo-default-sg",
            "name_prefix": "",
            "owner_id": "988182270763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mlops-demo-sg"
            },
            "tags_all": {
              "Name": "mlops-demo-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b8a312cdfe988fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988182270763:security-group/sg-094b8aa2b4612e3ea",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094b8aa2b4612e3ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow HTTPS inbound from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "mlops-demo-vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "988182270763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mlops-demo-vpc-endpoint-sg"
            },
            "tags_all": {
              "Name": "mlops-demo-vpc-endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b8a312cdfe988fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3105421313",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-091dc5cbd055acec4",
            "security_group_rule_id": "sgr-02fdb965eedd7ac78",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.default",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 0,
            "id": "sgrule-2198024413",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-091dc5cbd055acec4",
            "security_group_rule_id": "sgr-0f74b16d586609896",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.default",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc_endpoint_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-2513384805",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-094b8aa2b4612e3ea",
            "security_group_rule_id": "sgr-046a4c4897a3b8a6d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.vpc_endpoint",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc_endpoint_https_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow HTTPS inbound from VPC",
            "from_port": 443,
            "id": "sgrule-3505230044",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-094b8aa2b4612e3ea",
            "security_group_rule_id": "sgr-0bdba34691b86652f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.vpc_endpoint",
            "module.network.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988182270763:subnet/subnet-0f8ebae5db3c66cda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8ebae5db3c66cda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "988182270763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mlops-demo-subnet-1"
            },
            "tags_all": {
              "Name": "mlops-demo-subnet-1"
            },
            "vpc_id": "vpc-05b8a312cdfe988fd"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988182270763:subnet/subnet-0f59a420c97b3ae11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f59a420c97b3ae11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "988182270763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mlops-demo-subnet-2"
            },
            "tags_all": {
              "Name": "mlops-demo-subnet-2"
            },
            "vpc_id": "vpc-05b8a312cdfe988fd"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988182270763:vpc/vpc-05b8a312cdfe988fd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0df4cf0973c3fcedb",
            "default_route_table_id": "rtb-039a18c692b0be693",
            "default_security_group_id": "sg-07b91fbe50e9969c1",
            "dhcp_options_id": "dopt-05ac97b42975da2fd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05b8a312cdfe988fd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-039a18c692b0be693",
            "owner_id": "988182270763",
            "tags": {
              "Name": "mlops-demo-vpc"
            },
            "tags_all": {
              "Name": "mlops-demo-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudwatch_logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988182270763:vpc-endpoint/vpce-0bb9b5b002c424cb8",
            "dns_entry": [
              {
                "dns_name": "vpce-0bb9b5b002c424cb8-6nbq7ipo.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0bb9b5b002c424cb8-6nbq7ipo-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0bb9b5b002c424cb8-6nbq7ipo-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02141613VEIH6TYUXLZ5"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02152002H8TE69A0D2B4"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z021572931FNBMCD6H2BR"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z00157289AI9HUQSNBIC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0bb9b5b002c424cb8",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05bcb0e19df1c6588",
              "eni-0aac898e630f9b032"
            ],
            "owner_id": "988182270763",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-094b8aa2b4612e3ea"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-0f59a420c97b3ae11",
              "subnet-0f8ebae5db3c66cda"
            ],
            "tags": {
              "Name": "mlops-demo-logs-endpoint"
            },
            "tags_all": {
              "Name": "mlops-demo-logs-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05b8a312cdfe988fd"
          },
          "dependencies": [
            "module.network.aws_security_group.vpc_endpoint",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudwatch_metrics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988182270763:vpc-endpoint/vpce-073903868791d0f49",
            "dns_entry": [
              {
                "dns_name": "vpce-073903868791d0f49-mu4646jg.monitoring.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-073903868791d0f49-mu4646jg-us-east-1a.monitoring.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-073903868791d0f49-mu4646jg-us-east-1b.monitoring.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "monitoring.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07994672HNIB7PUUCNYU"
              },
              {
                "dns_name": "monitoring.us-east-1.api.aws",
                "hosted_zone_id": "Z0008409TNT01M0VCRJF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-073903868791d0f49",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02a3cee75e5490249",
              "eni-08f2d314bc70c4cb2"
            ],
            "owner_id": "988182270763",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-094b8aa2b4612e3ea"
            ],
            "service_name": "com.amazonaws.us-east-1.monitoring",
            "state": "available",
            "subnet_ids": [
              "subnet-0f59a420c97b3ae11",
              "subnet-0f8ebae5db3c66cda"
            ],
            "tags": {
              "Name": "mlops-demo-metrics-endpoint"
            },
            "tags_all": {
              "Name": "mlops-demo-metrics-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05b8a312cdfe988fd"
          },
          "dependencies": [
            "module.network.aws_security_group.vpc_endpoint",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988182270763:vpc-endpoint/vpce-00a8935c6206dbb0c",
            "dns_entry": [
              {
                "dns_name": "vpce-00a8935c6206dbb0c-u15arovo.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00a8935c6206dbb0c-u15arovo-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00a8935c6206dbb0c-u15arovo-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0800882Y5E8IAQE4095"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z00153113AJKQVEWDLS9E"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-00a8935c6206dbb0c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0729cc971090702b5",
              "eni-07744fec08b58ad2d"
            ],
            "owner_id": "988182270763",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-094b8aa2b4612e3ea"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-0f59a420c97b3ae11",
              "subnet-0f8ebae5db3c66cda"
            ],
            "tags": {
              "Name": "mlops-demo-ecr-api-endpoint"
            },
            "tags_all": {
              "Name": "mlops-demo-ecr-api-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05b8a312cdfe988fd"
          },
          "dependencies": [
            "module.network.aws_security_group.vpc_endpoint",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988182270763:vpc-endpoint/vpce-0a19e24b5afffc2c3",
            "dns_entry": [
              {
                "dns_name": "vpce-0a19e24b5afffc2c3-r1nc4kke.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a19e24b5afffc2c3-r1nc4kke-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a19e24b5afffc2c3-r1nc4kke-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02138192WVSMNW05D470"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02138192WVSMNW05D470"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z07999791EK0H6WMCN93E"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z07999791EK0H6WMCN93E"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0a19e24b5afffc2c3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05899bf815e4cfe84",
              "eni-08f4cf4d306558986"
            ],
            "owner_id": "988182270763",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-094b8aa2b4612e3ea"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-0f59a420c97b3ae11",
              "subnet-0f8ebae5db3c66cda"
            ],
            "tags": {
              "Name": "mlops-demo-ecr-dkr-endpoint"
            },
            "tags_all": {
              "Name": "mlops-demo-ecr-dkr-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05b8a312cdfe988fd"
          },
          "dependencies": [
            "module.network.aws_security_group.vpc_endpoint",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988182270763:vpc-endpoint/vpce-0c1e6925014f1aafc",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-0c1e6925014f1aafc",
            "owner_id": "988182270763",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-039a18c692b0be693"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "mlops-demo-s3-endpoint"
            },
            "tags_all": {
              "Name": "mlops-demo-s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-05b8a312cdfe988fd"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988182270763:vpc-endpoint/vpce-024ad6427073a9bf8",
            "dns_entry": [
              {
                "dns_name": "vpce-024ad6427073a9bf8-3xz7gvzq.api.sagemaker.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-024ad6427073a9bf8-3xz7gvzq-us-east-1a.api.sagemaker.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-024ad6427073a9bf8-3xz7gvzq-us-east-1b.api.sagemaker.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.sagemaker.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02132522RH3S0X3JLSE8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-024ad6427073a9bf8",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04c94864f5bcd8f3d",
              "eni-088f809906684808b"
            ],
            "owner_id": "988182270763",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-094b8aa2b4612e3ea"
            ],
            "service_name": "com.amazonaws.us-east-1.sagemaker.api",
            "state": "available",
            "subnet_ids": [
              "subnet-0f59a420c97b3ae11",
              "subnet-0f8ebae5db3c66cda"
            ],
            "tags": {
              "Name": "mlops-demo-sagemaker-api-endpoint"
            },
            "tags_all": {
              "Name": "mlops-demo-sagemaker-api-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05b8a312cdfe988fd"
          },
          "dependencies": [
            "module.network.aws_security_group.vpc_endpoint",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_runtime",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988182270763:vpc-endpoint/vpce-07be764ab636c5775",
            "dns_entry": [
              {
                "dns_name": "vpce-07be764ab636c5775-1hgmeeqk.runtime.sagemaker.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07be764ab636c5775-1hgmeeqk-us-east-1b.runtime.sagemaker.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07be764ab636c5775-1hgmeeqk-us-east-1a.runtime.sagemaker.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "runtime.sagemaker.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01515239UC3JRG1838W"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-07be764ab636c5775",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00b03360acd0035c2",
              "eni-065460cb5070d2208"
            ],
            "owner_id": "988182270763",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-094b8aa2b4612e3ea"
            ],
            "service_name": "com.amazonaws.us-east-1.sagemaker.runtime",
            "state": "available",
            "subnet_ids": [
              "subnet-0f59a420c97b3ae11",
              "subnet-0f8ebae5db3c66cda"
            ],
            "tags": {
              "Name": "mlops-demo-sagemaker-runtime-endpoint"
            },
            "tags_all": {
              "Name": "mlops-demo-sagemaker-runtime-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05b8a312cdfe988fd"
          },
          "dependencies": [
            "module.network.aws_security_group.vpc_endpoint",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available",
            "module.network.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}